# Exolix

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  Compile.bat  Compile.sh  LICENSE.txt  License  README.md  ReadMe.md  Readme.md  Scratch.cxx  Setup.bat  Setup.sh  build.gradle  exolix.yml  package-lock.json  package.json  sailr.json  settings.gradle  tcp.js  tsconfig.json
.github/workflows/: cmake.yml  main.yml
ElixorCore/: CMakeLists.txt
ElixorCore/ElixorCore/StringUtil/: StringUtil.cxx  StringUtil.h
ElixorRuntime/: CMakeLists.txt
ElixorRuntime/ElixorRuntime/: ElixorRuntime.cxx
Scratch/: CMakeLists.txt
Scratch/Scratch/: Scratch.cxx
__test__/: index.js  package-lock.json  package.json
a5x/: Ignore.txt  RepoInfo.yml
apiSocket/: build.gradle
bnd/nodejs/: package.json  tsconfig.json
bnd/nodejs/src/: index.ts
cmake/: SkylixExolixConfig.cmake
desktop/: build.gradle
doc/: ReadMe.md
docs/lexer/reference/: Lexer.md
elixor/: CMakeLists.txt
elixor/include/: elixor.hxx
elixor/include/elixor/server/: Server.hxx
elixor/server/: Server.cxx  Server.hxx
elixor/server/linux/: TCPLinuxServer.cxx  TCPLinuxServer.hxx
elixor/src/: elixor.cxx  t.cxx
elixor/src/internal/: ElixorError.cxx  ElixorError.hxx
elixor/src/lexer/: Lexer.cxx
elixor/src/server/: Server.cxx  Server.hxx
elixor/src/server/crossPlatform/: SocketMessageInternal.hxx
elixor/src/server/linux/: LinuxSocket.cxx  LinuxSocket.hxx
elixor/src/server/macOS/: MacOSSocket.cxx  MacOSSocket.hxx
elixor/src/server/websocket/: WebSocketBackend.cxx  WebSocketBackend.hxx
elixor/src/server/websockets/: WebSocketBackend.cxx  WebSocketBackend.hxx
elixor/src/server/websockets/errors/: ServerErrors.hxx
elixor/src/server/win32/: Win32Socket.cxx  Win32Socket.hxx
elixor/src/strings/: Strings.cxx
elixor/src/system/process/: ThisProcess.cxx  ThisProcess.hxx
elixor/system/process/: ThisProcess.cxx
elixorFX/: build.gradle
exa/: CMakeLists.txt
exa/helloWorld/: README.md  main.cc
exa/httpHelloServer/: README.md  main.cc
exa/tcpServer/: README.md  main.cc
example/: CMakeLists.txt
example/algorithmColorRgbFind/: CMakeLists.txt  main.cxx
example/debugProbe/: CMakeLists.txt  main.cxx
example/errorResult/: CMakeLists.txt  main.cxx
example/helloWorld/: main.cc
example/main/: CMakeLists.txt  config.h  main.cc  main.cxx
example/pathJoin/: CMakeLists.txt  main.cc
example/socket-server-hello-world/: main.cc
example/termEdit/: CMakeLists.txt  main.cxx
example/win32ConsoleKeyListen/: CMakeLists.txt  main.cxx
examples/: Cargo.toml
examples/helloWorld/: main.xe
examples/lvm/: e  h.ll  h.s
examples/rest-hello-world/: main.rs
examples/scratches/: main.rs
exolixc/: main.cxx
exolixc/exolix/: BuildConfig.hxx  Compiler.cxx  Compiler.hxx
exolixc/exolix/ast/: AstGenerator.cxx
exolixc/exolix/lexer/: Lexer.cxx
exolixc/includes/exolix/: Compiler.hxx
exolixc/libx/lexer/: Lexer.cxx
gatewayService/: build.gradle
inc/: exolix.h  skylix.h
inc/exolix/fs/: Fs.hh
inc/exolix/net/: Net.hh
inc/exolix/os/: Os.hh
inc/exolix/stdio/: Stdio.hh
inc/exolix/str/: Str.hh
inc/skylix/: Skylix.hh
include/: exolix  exolix.hxx  exolixs
include/exolix/: err.h  gate.h  http.h  net.h  str.h
include/exolixc/: exolix.h
lib/: exolix.h  test.cxx  test.hxx  types.hxx
lib/algorithm/: searches.cxx  searches.hxx  strings.cxx  strings.hxx
lib/app/: app.cxx  app.hxx  process.cxx  process.hxx
lib/color/: colors.cxx  colors.hxx  rgb.hxx
lib/debug/: probe.cxx  probe.hxx
lib/error/: error.cxx  error.hxx  result.cxx  result.hxx
lib/logging/: color256.hxx
lib/net/: address.cc  address.cxx  address.h  address.hxx  net.cxx  net.hxx  tcpip.cc  tcpip.h
lib/net/addr/: addr.cxx  addr.hxx
lib/net/server/: udp.hxx
lib/net/tcp/: sockets.cxx  sockets.hxx  tlsManager.cxx  tlsManager.hxx
lib/number/: condition.cc  condition.cxx  condition.h  condition.hxx  parsing.cc  parsing.cxx  parsing.h  parsing.hxx  types.h
lib/path/: path.cc  path.h
lib/process/: process.cxx  process.hxx
lib/result/: result.cxx  result.hxx
lib/string/: condition.cc  condition.cxx  condition.h  condition.hxx  conversion.cc  conversion.h  deconstruction.cc  deconstruction.h  token.cxx  token.hxx
lib/terminal/: color.cxx  color.hxx  console.cxx  console.hxx  xt256.hxx  xtwidget.cxx  xtwidget.hxx
lib/terminal/consoleOs/: consoleOs.cxx  consoleOs.hxx  (+2 more)
lib/thread/: thread.cc  thread.cxx  thread.h  thread.hxx
proto/: index.html  index2.html
proto/cxx/: CMakeLists.txt
proto/cxx/cmake/: CMakeCargo.cmake  CMakeDetermineRustCompiler.cmake  CMakeRustCompiler.cmake.in  CMakeRustInformation.cmake  FindRust.cmake
proto/cxx/include/: rustl.h
proto/cxx/rustl/: CMakeLists.txt  Cargo.toml
proto/cxx/rustl/src/: lib.rs
proto/cxx/src/: main.cxx
proto/cxx/xl/: CMakeLists.txt  gr.cxx
proto/cxx/xl/include/: gr.hxx
runtime/: CMakeLists.txt
runtime/src/: Main.cxx
scratch/: main.cxx
scratches/: CMakeLists.txt  Cargo.toml  build.gradle
scratches/src/: base.cxx
script/: build.sh  init.sh  package.json
script/clang/: format.js
script/cmake/: run.js
script/lib/: commandRunner.js  compile.js  meta.js
sct/: package.json
sct/jobs/: generateInclude.js
sky/: Skylix.cc
src/: core.rs  err.h  gate.h  http.h  lib.rs  main.xl  net.h  sockets.rs  str.h
src/err/: errors.cc  errors.h
src/gate/: server.cc  server.h
src/http/: hello.rs  http.cc  http.h  parsing.cc  parsing.h
src/net/: http.cc  http.h  sockets.cc  sockets.h
src/str/: modify.cc  modify.h
terminal/: build.gradle  index.js
test/NetAddr-AutoFindPort/: test.cxx
test/NetAddr-AutoGetHostValid/: test.cxx
test/NetAddr-AutoGetHostVersion/: test.cxx
test/NetAddr-ValdidateBadIpv4/: test.cxx
test/NetAddr-ValidatdBadIpv6/: test.cxx
test/NetAddr-ValidateGoodIpv4/: test.cxx
test/main/: CMakeLists.txt  main.cxx
test/netAddrFindOpenPort/: test.cxx
test/netAddrValidateGoodIpv6/: test.cxx
wiki/reference/: ReadMe.md
xb/: package.json
xb/src/: Build.js  Watch.js
xs/: Scratch.ts  lead.js  package.json
(+210 files in other folders)
